# xor

./: CMakeLists.txt  encryptfile.cpp  encryptfile.h  engine.cpp  engine.h  inputfileschecker.cpp  inputfileschecker.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
